--- a/ze/tests/interval_profiling_fast.yaml
+++ b/ze/tests/interval_profiling_fast.yaml
@@ -21,6 +21,7 @@
 - :name: lttng:device
   :common_context:
     hostname: aurora12.gov
+    backend: 1
   :payload:
     name: zeCommandListAppendBarrier
     dur: 8
