`xprof` in ruby (#162)
* First Proof of Concept

* Add logging and ze mode

* Add options

* Add most of the options

* Add backend and fix mpi

* Add backend support

* add version

* Fix puts

* Remove xprof.sh

* Remove deps

* Add verbosity

* Enable more events

* cleaner

* Move require

* Handle empty LD_LIBRARY_PATH

* Merge master in xprof (#166)

* Btx ze (#160)

* Try hip

* Add missing files

* Fix dist

* Fix comparator.rb

* Ugly fix

* Fix comparator.rb

* Fix zehip trace

* Fix include

* Add new test

* Better name

* Add missing file

* Improvement!

* Typo

* Run yamlfmt

* Simplify ignore

* Fix template thanks to Ye

* Add more check for push pop

* Update utils/babeltrace_to_metababel_model.rb

Co-authored-by: Aurelio Vivas <aurelio.vivas@correounivalle.edu.co>

* Update ze/btx_zeinterval_callbacks.cpp

Co-authored-by: Aurelio Vivas <aurelio.vivas@correounivalle.edu.co>

* Update ze/Makefile.am

Co-authored-by: Aurelio Vivas <aurelio.vivas@correounivalle.edu.co>

* Update ze/btx_zeinterval_callbacks.cpp

Co-authored-by: Aurelio Vivas <aurelio.vivas@correounivalle.edu.co>

* typos

---------

Co-authored-by: Thomas Applencourt <apl@anl.gov>
Co-authored-by: Aurelio Vivas <aurelio.vivas@correounivalle.edu.co>

* Fix CI? (#165)

* Fix CI?

* Go back in time

* diff

* add space

* Fix CI (and tests...)

* Fix tests one more time

* Update ze/btx_zeinterval_callbacks.cpp

---------

Co-authored-by: Thomas Applencourt <apl@anl.gov>

---------

Co-authored-by: Thomas Applencourt <apl@anl.gov>
Co-authored-by: Aurelio Vivas <aurelio.vivas@correounivalle.edu.co>

* Revert "Merge master in xprof" (#167)

* xprof: add openmpi env vars

* Add set

* Fix multiple traced-ranks

* Better log

* Fix readme

---------

Co-authored-by: Thomas Applencourt <apl@anl.gov>
Co-authored-by: Aurelio Vivas <aurelio.vivas@correounivalle.edu.co>

--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -161,15 +161,8 @@ EXTRA_DIST += \
 
 CLEANFILES += tracer_ze.c
 
-zeprof.sh: $(top_builddir)/xprof/xprof.sh.erb
-	$(ERB) -T 1 languages="ze" $< > $@
-	chmod a+x $@
-
-CLEANFILES += zeprof.sh
-
 bin_SCRIPTS = \
-	tracer_ze.sh \
-	zeprof.sh
+	tracer_ze.sh
 
 noinst_LTLIBRARIES = libzetracepoints.la
 
