--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -490,17 +490,17 @@ def postprocess(folder, _options)
     opts = 'trace'
     opts << '--restrict '
     opts << '--context '
-    opts << "--backend #{backends} " unless backends.empty?
+    opts << "--backend #{backends} "
   elsif OPTIONS.include?(:timeline)
     opts = 'timeline'
-    opts << "--backend #{backends} " unless backends.empty?
+    opts << "--backend #{backends} "
   else
     opts = 'tally '
     opts << '--display_kernel_verbose true ' if OPTIONS.include?(:'kernel-verbose')
     opts << '--display_metadata true ' if OPTIONS.include?(:metadata)
-    opts << "--display_name_max_size #{OPTIONS[:'max-name-size']} " if OPTIONS.include?(:'max-name-size')
+    opts << "--display_name_max_size #{OPTIONS[:'max-name-size']} "
     opts << '--display_mode json ' if OPTIONS.include?(:json)
-    opts << "--backend #{backends} " unless backends.empty?
+    opts << "--backend #{backends} "
     opts << "--backend_level #{backend_level}" unless backend_level.empty?
     opts << '--display extended ' if OPTIONS.include?(:extended)
   end
@@ -517,18 +517,28 @@ end
 #   |_) _. ._ _ o ._   _    /  |   |
 #   |  (_| | _> | | | (_|   \_ |_ _|_
 #                      _|
-
-def to_i_or_raise(str)
-  str.match?(/^\d+$/) ? str.to_i : raise(OptionParser::ParseError.new("Invalid value (#{str}). Only integer accepted"))
-end
-
 parser = OptionParser.new
+
+# backend default are hardcoded inside the cpp for now
+options = { tracing_mode: 'default', profile: true, backend: ['omp:2', 'cl:1', 'ze:1', 'cuda:1', 'hip:1'],
+            'traced-ranks': Set[-1],
+            'max-name-size': 80,
+            debug: Logger::FATAL }
 
 # Tracing
 parser.on('-m', '--tracing-mode=MODE', %w[minimal default full], 'Define the category of events traced')
 parser.on('--traced-ranks=RANK', Array, 'Select with MPI rank will be traced.',
           'Use -1 to mean all ranks.',
-          'Default: -1') { |ranks| ranks.map{ |r| to_i_or_raise(r) }.to_set }
+          "Default: #{options[:'traced-ranks'].join(',')}") do |ranks|
+  ranks.map do |r|
+    if r.match?(/^\d+$/)
+      r.to_i
+    else
+      raise(OptionParser::ParseError,
+            "Invalid value (#{r}). Only integer accepted")
+    end
+  end.to_set
+end
 parser.on('--[no-]profile', 'Device activities will not profiled')
 
 # General Options
@@ -547,20 +557,18 @@ parser.on('-e', '--extended', 'The tally will be printed for each Hostname / Pro
 parser.on('-k', '--kernel-verbose',
           'The tally will report kernels execution time with SIMD width and global/local sizes')
 parser.on('--max-name-size SIZE',
+          OptionParser::DecimalInteger,
           'Maximum size allowed for kernels names.',
           'Use -1 to mean no limit.',
-          'Default: 80') { |size| to_i_or_raise(size) }
+          "Default: #{options[:'max-name-size']}")
 
 parser.on('--metadata', 'Display trace Metadata')
 parser.on('-v', '--version', 'Display THAPI version')
 parser.on('-h', '--help', 'Display this message')
 
-parser.on('--debug [LEVEL]', 'Level of debug [default 0]') { |level| to_i_or_raise(level) }
-
-# backend default are hardcoded inside the cpp for now
-options = { tracing_mode: 'default', profile: true, backend: ['omp:2', 'cl:1', 'ze:1', 'cuda:1', 'hip:1'],
-            'traced-ranks': Set[-1],
-            debug: Logger::FATAL }
+parser.on('--debug [LEVEL]', OptionParser::DecimalInteger, 'Set the Level of debug',
+          "By default the debug level is #{options[:debug]}.",
+          "If LEVEL is omitted the debug level with be set to #{Logger::INFO}") { |d| d || Logger::INFO }
 
 def print_help_and_exit(parser, exit_code: 1)
   puts(parser.help)
@@ -579,7 +587,7 @@ print_help_and_exit(parser) if ARGV.empty?
 
 begin
   parser.parse!(into: options)
-rescue OptionParser::InvalidOption, OptionParser::MissingArgument, OptionParser::ParseError => e
+rescue StandardError => e
   puts("ERROR: #{e}")
   print_help_and_exit(parser)
 end
@@ -596,9 +604,7 @@ LOGGER.debug(OPTIONS)
 # Action
 
 # We don't rely on the Parser-OPT default help, as it doesn't print the footer
-if OPTIONS.include?(:help)
-  print_help_and_exit(parser, exit_code: 0)
-end
+print_help_and_exit(parser, exit_code: 0) if OPTIONS.include?(:help)
 
 if OPTIONS.include?(:version)
   puts(File.read(File.join(DATADIR, 'version')))
